--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ v1.3.2 - TBD
    - Laser energy blocks.
   Fix Fusion Energy Structure Laser Beam was solid and not transparent.
    - Only for 1.15 version.
+  Added an Auto Shutoff toggle to the Portal Control Panel.
 
 
 
