--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,8 @@ v1.3.2 - TBD
   Fix Fusion Energy Structure Laser Beam was solid and not transparent.
    - Only for 1.15 version.
   Added an Auto Shutoff toggle to the Portal Control Panel.
+  Fixed crashes regarding ticking TileEntities and getCapabilities().
+   - Only for 1.14 and 1.15 versions.
 
 
 
