--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 v1.5 - TBD
 NEW:
   Added 5 new beam emitter type items.
+  Added Plasma Generator machine.
+   - Deleted the crafting recipe for Plasma that was added in the previous version.
+CHANGED:
 
 
 
