Added Dimensional Anchor Functionality

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,9 @@ NEW:
    - Deleted the crafting recipe for Plasma that was added in the previous version.
   ReAdded Ring drops, if you have the Curios mod loaded.
    - Added the ability to disable Rings.
+  The Dimensional Anchor now works! It protects you from Black Holes, and prevents
+    you from traveling to other dimensions!
+  Added the Survivor advancement.
 CHANGED:
   Increased the chance to drop an Unidentified Ring when killing enemy mobs.
   The Dimensional Anchor is now registered as a Curios Charm, if you
