--- a/src/main/resources/assets/addsynth_energy/lang/ar_sa.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ar_sa.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "الفرن الكهربائي",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "آلة واجهة الطاقة",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "الطاقة",
 "gui.addsynth_energy.common.energy_stored": "الطاقة المخزنة",
