--- a/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
+++ b/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektrické pece",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Univerzální energetické rozhraní",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energie",
 "gui.addsynth_energy.common.energy_stored": "Energie uložena",
