--- a/src/main/resources/assets/addsynth_energy/lang/de_de.json
+++ b/src/main/resources/assets/addsynth_energy/lang/de_de.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektroofen",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Energie Schnittstelle Maschine",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energie",
 "gui.addsynth_energy.common.energy_stored": "Energie gespeichert",
