--- a/src/main/resources/assets/addsynth_energy/lang/el_gr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/el_gr.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Ηλεκτρικός φούρνος",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Παγκόσμια ενεργειακή διασύνδεση",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Ενέργεια",
 "gui.addsynth_energy.common.energy_stored": "Αποθηκευμένη ενέργεια",
