--- a/src/main/resources/assets/addsynth_energy/lang/en_ca.json
+++ b/src/main/resources/assets/addsynth_energy/lang/en_ca.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Electric Furnace",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Universal Energy Interface",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energy",
 "gui.addsynth_energy.common.energy_stored": "Energy Stored",
