--- a/src/main/resources/assets/addsynth_energy/lang/es_es.json
+++ b/src/main/resources/assets/addsynth_energy/lang/es_es.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Horno eléctrico",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Interfaz de energía universal",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energía",
 "gui.addsynth_energy.common.energy_stored": "Energía guardada",
