--- a/src/main/resources/assets/addsynth_energy/lang/fa_ir.json
+++ b/src/main/resources/assets/addsynth_energy/lang/fa_ir.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "کوره الکتریکی",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "رابط انرژی جهانی",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "انرژی",
 "gui.addsynth_energy.common.energy_stored": "انرژی ذخیره شده",
