--- a/src/main/resources/assets/addsynth_energy/lang/fr_fr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/fr_fr.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Four électrique",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Interface énergétique universelle",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Énergie",
 "gui.addsynth_energy.common.energy_stored": "énergie stockée",
