--- a/src/main/resources/assets/addsynth_energy/lang/hi_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/hi_in.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "विद्युत भट्ठी",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "यूनिवर्सल एनर्जी इंटरफेस",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "ऊर्जा",
 "gui.addsynth_energy.common.energy_stored": "ऊर्जा का भंडारण",
