--- a/src/main/resources/assets/addsynth_energy/lang/hu_hu.json
+++ b/src/main/resources/assets/addsynth_energy/lang/hu_hu.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektromos kemence",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Univerzális energiainterfész",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energia",
 "gui.addsynth_energy.common.energy_stored": "Tárolt energia",
