--- a/src/main/resources/assets/addsynth_energy/lang/it_it.json
+++ b/src/main/resources/assets/addsynth_energy/lang/it_it.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Forno elettrico",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Macchina interfaccia energia",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energia",
 "gui.addsynth_energy.common.energy_stored": "Energia immagazzinata",
