--- a/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "전기로",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "유니버설 에너지 인터페이스",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "에너지",
 "gui.addsynth_energy.common.energy_stored": "에너지 저장",
