--- a/src/main/resources/assets/addsynth_energy/lang/ms_my.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ms_my.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Relau Elektrik",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "antara muka tenaga sejagat",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Tenaga",
 "gui.addsynth_energy.common.energy_stored": "Tenaga Disimpan",
