--- a/src/main/resources/assets/addsynth_energy/lang/pl_pl.json
+++ b/src/main/resources/assets/addsynth_energy/lang/pl_pl.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Piec elektryczny",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Uniwersalny interfejs energetyczny",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energia",
 "gui.addsynth_energy.common.energy_stored": "Energia zmagazynowana",
