--- a/src/main/resources/assets/addsynth_energy/lang/pt_br.json
+++ b/src/main/resources/assets/addsynth_energy/lang/pt_br.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Forno elétrico",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Máquina de interface de energia",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energia",
 "gui.addsynth_energy.common.energy_stored": "Energia armazenada",
