--- a/src/main/resources/assets/addsynth_energy/lang/ro_ro.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ro_ro.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Cuptor electric",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Interfața energetică universală",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energie",
 "gui.addsynth_energy.common.energy_stored": "Stocate de energie",
