--- a/src/main/resources/assets/addsynth_energy/lang/ru_ru.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ru_ru.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Электрическая печь",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Универсальный энергетический интерфейс",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "энергии",
 "gui.addsynth_energy.common.energy_stored": "накопленная энергия",
