--- a/src/main/resources/assets/addsynth_energy/lang/sk_sk.json
+++ b/src/main/resources/assets/addsynth_energy/lang/sk_sk.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektrická pec",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Univerzálne energetické rozhranie",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "energie",
 "gui.addsynth_energy.common.energy_stored": "Energia uložená",
