--- a/src/main/resources/assets/addsynth_energy/lang/sv_se.json
+++ b/src/main/resources/assets/addsynth_energy/lang/sv_se.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektrisk ugn",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "universellt energi gränssnitt",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Energi",
 "gui.addsynth_energy.common.energy_stored": "Lagrad energi",
