--- a/src/main/resources/assets/addsynth_energy/lang/ta_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ta_in.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "மின்சார உலை",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "யுனிவர்சல் எரிசக்தி இடைமுகம்",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "ஆற்றல்",
 "gui.addsynth_energy.common.energy_stored": "ஆற்றல் சேமிக்கப்பட்டது",
