--- a/src/main/resources/assets/addsynth_energy/lang/tr_tr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/tr_tr.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Elektrikli fırın",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Evrensel enerji arayüzü",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Enerji",
 "gui.addsynth_energy.common.energy_stored": "Depolanan Enerji",
