--- a/src/main/resources/assets/addsynth_energy/lang/uk_ua.json
+++ b/src/main/resources/assets/addsynth_energy/lang/uk_ua.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Електрична піч",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Універсальний енергетичний інтерфейс",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Енергія",
 "gui.addsynth_energy.common.energy_stored": "Зберігається енергія",
