--- a/src/main/resources/assets/addsynth_energy/lang/vi_vn.json
+++ b/src/main/resources/assets/addsynth_energy/lang/vi_vn.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "Lò sưởi điện",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "Giao diện năng lượng toàn cầu",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "Năng lượng",
 "gui.addsynth_energy.common.energy_stored": "Năng lượng được lưu trữ",
