--- a/src/main/resources/assets/addsynth_energy/lang/zh_tw.json
+++ b/src/main/resources/assets/addsynth_energy/lang/zh_tw.json
@@ -20,6 +20,7 @@
 "block.addsynth_energy.electric_furnace": "電爐",
 "block.addsynth_energy.circuit_fabricator": "Circuit Fabricator",
 "block.addsynth_energy.universal_energy_interface": "通用能量接口",
+"block.addsynth_energy.energy_diagnostics_block": "Energy Diagnostics",
 
 "gui.addsynth_energy.common.energy": "能源",
 "gui.addsynth_energy.common.energy_stored": "儲能",
