--- a/src/main/resources/assets/addsynth_energy/lang/de_de.json
+++ b/src/main/resources/assets/addsynth_energy/lang/de_de.json
@@ -34,7 +34,7 @@
 "gui.addsynth_energy.common.time_to_full_charge": "Zeit bis zur vollen Ladung",
 "gui.addsynth_energy.common.no_energy_change": "Keine Energieänderung",
 "gui.addsynth_energy.common.tick": "tick",
-"gui.addsynth_energy.common.lasers": "Lasers",
+"gui.addsynth_energy.common.auto_shutoff": "Automatische Abschaltung",
 "gui.addsynth_energy.tooltip.energy": "%s Energy",
 "gui.addsynth_energy.tooltip.class_1_machine": "Class 1 Machine",
 "gui.addsynth_energy.tooltip.class_2_machine": "Class 2 Machine",
