--- a/src/main/resources/assets/overpowered/lang/de_de.json
+++ b/src/main/resources/assets/overpowered/lang/de_de.json
@@ -9,12 +9,12 @@
 "block.overpowered.light_block": "Leichter Block",
 "block.overpowered.null_block": "Nullblock",
 
-"item.overpowered.celestial_sword": "Energie-Schwert",
-"item.overpowered.celestial_pickaxe": "Energie-Spitzhacke",
-"item.overpowered.celestial_axe": "Energie Axt",
-"item.overpowered.celestial_shovel": "Energieschaufel",
-"item.overpowered.celestial_hoe": "Energiehacke",
-"item.overpowered.celestial_scythe": "Energiesichel",
+"item.overpowered.celestial_sword": "Celestial Sword",
+"item.overpowered.celestial_pickaxe": "Celestial Pickaxe",
+"item.overpowered.celestial_axe": "Celestial Axe",
+"item.overpowered.celestial_shovel": "Celestial Shovel",
+"item.overpowered.celestial_hoe": "Celestial Hoe",
+"item.overpowered.celestial_scythe": "Celestial Scythe",
 
 "item.overpowered.void_sword": "Null-Schwert",
 "item.overpowered.void_pickaxe": "Null Spitzhacke",
