--- a/src/main/resources/assets/overpowered/lang/fa_ir.json
+++ b/src/main/resources/assets/overpowered/lang/fa_ir.json
@@ -9,12 +9,12 @@
 "block.overpowered.light_block": "بلوک نور",
 "block.overpowered.null_block": "بلوک صفر",
 
-"item.overpowered.celestial_sword": "شمشیر انرژی",
-"item.overpowered.celestial_pickaxe": "ابزار استخراج از قدرت",
-"item.overpowered.celestial_axe": "انرژی تبر",
-"item.overpowered.celestial_shovel": "حفاری ابزار قدرت",
-"item.overpowered.celestial_hoe": "ابزار انرژی",
-"item.overpowered.celestial_scythe": "طرح انرژی",
+"item.overpowered.celestial_sword": "Celestial Sword",
+"item.overpowered.celestial_pickaxe": "Celestial Pickaxe",
+"item.overpowered.celestial_axe": "Celestial Axe",
+"item.overpowered.celestial_shovel": "Celestial Shovel",
+"item.overpowered.celestial_hoe": "Celestial Hoe",
+"item.overpowered.celestial_scythe": "Celestial Scythe",
 
 "item.overpowered.void_sword": "شمشیر تیره",
 "item.overpowered.void_pickaxe": "Dark Pickaxe [نیاز به ترجمه دارد]",
