--- a/src/main/resources/assets/overpowered/lang/hi_in.json
+++ b/src/main/resources/assets/overpowered/lang/hi_in.json
@@ -9,12 +9,12 @@
 "block.overpowered.light_block": "लाइट ब्लॉक",
 "block.overpowered.null_block": "शून्य ब्लॉक",
 
-"item.overpowered.celestial_sword": "ऊर्जा तलवार",
-"item.overpowered.celestial_pickaxe": "ऊर्जा पिकैक्स",
-"item.overpowered.celestial_axe": "ऊर्जा कुल्हाड़ी",
-"item.overpowered.celestial_shovel": "ऊर्जा फावड़ा",
-"item.overpowered.celestial_hoe": "कुदाल",
-"item.overpowered.celestial_scythe": "ऊर्जा दरांती",
+"item.overpowered.celestial_sword": "Celestial Sword",
+"item.overpowered.celestial_pickaxe": "Celestial Pickaxe",
+"item.overpowered.celestial_axe": "Celestial Axe",
+"item.overpowered.celestial_shovel": "Celestial Shovel",
+"item.overpowered.celestial_hoe": "Celestial Hoe",
+"item.overpowered.celestial_scythe": "Celestial Scythe",
 
 "item.overpowered.void_sword": "नल तलवार",
 "item.overpowered.void_pickaxe": "नल पिकैक्स",
