--- a/src/main/resources/assets/overpowered/lang/ta_in.json
+++ b/src/main/resources/assets/overpowered/lang/ta_in.json
@@ -9,12 +9,12 @@
 "block.overpowered.light_block": "லைட் பிளாக்",
 "block.overpowered.null_block": "பூஜ்ய பிளாக்",
 
-"item.overpowered.celestial_sword": "ஆற்றல் வாள்",
-"item.overpowered.celestial_pickaxe": "எரிசக்தி பிக்மேக்ஸ்",
-"item.overpowered.celestial_axe": "ஆற்றல் கோடாரி",
-"item.overpowered.celestial_shovel": "எரிசக்தி திணி",
-"item.overpowered.celestial_hoe": "ஆற்றல் தோட்டக்கலை கருவி",
-"item.overpowered.celestial_scythe": "ஆற்றல் அரிவாள்",
+"item.overpowered.celestial_sword": "Celestial Sword",
+"item.overpowered.celestial_pickaxe": "Celestial Pickaxe",
+"item.overpowered.celestial_axe": "Celestial Axe",
+"item.overpowered.celestial_shovel": "Celestial Shovel",
+"item.overpowered.celestial_hoe": "Celestial Hoe",
+"item.overpowered.celestial_scythe": "Celestial Scythe",
 
 "item.overpowered.void_sword": "இருள் வாள்",
 "item.overpowered.void_pickaxe": "இருண்ட பிக்ஸாக்",
