--- a/src/main/resources/assets/addsynth_energy/lang/fr_fr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/fr_fr.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "énergie stockée",
 "gui.addsynth_energy.common.energy_usage": "La consommation d'énergie",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Taux d'extraction",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Mode",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Statut",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Contribution",
 "gui.addsynth_energy.jei_description.wire": "Le fil d'énergie est utilisé pour transférer l'énergie entre les machines.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Cela peut stocker un excès d'énergie.",
