--- a/src/main/resources/assets/addsynth_energy/lang/hi_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/hi_in.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "ऊर्जा का भंडारण",
 "gui.addsynth_energy.common.energy_usage": "ऊर्जा के उपयोग",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "मैक्स एक्स्ट्रेक्ट",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "मोड",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "स्थिति",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "इनपुट",
 "gui.addsynth_energy.jei_description.wire": "ऊर्जा तार का उपयोग मशीनों के बीच ऊर्जा को स्थानांतरित करने के लिए किया जाता है।",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "इससे अतिरिक्त ऊर्जा को स्टोर किया जा सकता है।",
