--- a/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "에너지 저장",
 "gui.addsynth_energy.common.energy_usage": "에너지 사용량",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "최대 추출",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "방법",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "상태",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "입력",
 "gui.addsynth_energy.jei_description.wire": "에너지 와이어는 기계간에 에너지를 전달하는 데 사용됩니다.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "이것은 과도한 에너지를 저장할 수 있습니다.",
