--- a/src/main/resources/assets/addsynth_energy/lang/ar_sa.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ar_sa.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "الطاقة المخزنة",
 "gui.addsynth_energy.common.energy_usage": "استخدام الطاقة",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "استخراج ماكس",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "الوضع",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "الحالة",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "إدخال",
 "gui.addsynth_energy.jei_description.wire": "يستخدم سلك الطاقة لنقل الطاقة بين الآلات.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "هذا يمكن أن يخزن الطاقة الزائدة.",
