--- a/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
+++ b/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Energie uložena",
 "gui.addsynth_energy.common.energy_usage": "Využití energie",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Míra extrakce",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Režim",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Stát",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Vstup",
 "gui.addsynth_energy.jei_description.wire": "energetický drát se používá k přenosu energie mezi stroji.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "To může ukládat přebytečnou energii.",
