--- a/src/main/resources/assets/addsynth_energy/lang/da_dk.json
+++ b/src/main/resources/assets/addsynth_energy/lang/da_dk.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Lagret energi",
 "gui.addsynth_energy.common.energy_usage": "Energiforbrug",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Maks ekstrakt",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Tilstand",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Status",
@@ -46,7 +48,6 @@
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
 "gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
 "gui.addsynth_energy.jei_description.wire": "energitråd bruges til at overføre energi mellem maskiner.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Dette kan lagre overskydende energi.",
