--- a/src/main/resources/assets/addsynth_energy/lang/el_gr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/el_gr.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Αποθηκευμένη ενέργεια",
 "gui.addsynth_energy.common.energy_usage": "Χρήση ενέργειας",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Ποσοστό εξαγωγής",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Τρόπος",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Κατάσταση",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Εισαγωγή",
 "gui.addsynth_energy.jei_description.wire": "το ενεργειακό καλώδιο χρησιμοποιείται για τη μεταφορά ενέργειας μεταξύ μηχανών.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Αυτό μπορεί να αποθηκεύσει υπερβολική ενέργεια.",
