--- a/src/main/resources/assets/addsynth_energy/lang/en_au.json
+++ b/src/main/resources/assets/addsynth_energy/lang/en_au.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Energy Stored",
 "gui.addsynth_energy.common.energy_usage": "Energy Usage",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Max Extract",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Mode",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Status",
@@ -46,7 +48,6 @@
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
 "gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
 "gui.addsynth_energy.jei_description.wire": "Use Energy Wire to connect all your machines together to transfer energy.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "This will store any excess energy that you generate, up to 1 million units of Energy.",
