--- a/src/main/resources/assets/addsynth_energy/lang/es_ar.json
+++ b/src/main/resources/assets/addsynth_energy/lang/es_ar.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Energía guardada",
 "gui.addsynth_energy.common.energy_usage": "Uso de energía",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Extracto máximo",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Modo",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Estado",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Entrada",
 "gui.addsynth_energy.jei_description.wire": "El cable de energía se utiliza para transferir energía entre máquinas.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Esto puede almacenar el exceso de energía.",
