--- a/src/main/resources/assets/addsynth_energy/lang/fa_ir.json
+++ b/src/main/resources/assets/addsynth_energy/lang/fa_ir.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "انرژی ذخیره شده",
 "gui.addsynth_energy.common.energy_usage": "مصرف انرژی",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "نرخ استخراج",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "حالت",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "وضعیت",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "ورودی",
 "gui.addsynth_energy.jei_description.wire": "سیم انرژی برای انتقال انرژی بین ماشین ها استفاده می شود.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "این می تواند انرژی اضافی را ذخیره کند.",
