--- a/src/main/resources/assets/addsynth_energy/lang/hu_hu.json
+++ b/src/main/resources/assets/addsynth_energy/lang/hu_hu.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Tárolt energia",
 "gui.addsynth_energy.common.energy_usage": "Energiafelhasználás",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Kivonási arány",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Mód",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Állapot",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Bemenet",
 "gui.addsynth_energy.jei_description.wire": "Az energiavezetéket energia átvitelére használják a gépek között.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Ez energiát tárolhat.",
