--- a/src/main/resources/assets/addsynth_energy/lang/ja_jp.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ja_jp.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "蓄えられたエネルギー",
 "gui.addsynth_energy.common.energy_usage": "エネルギー使用",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "最大抽出",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "モード",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "状態",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "入力",
 "gui.addsynth_energy.jei_description.wire": "エネルギー線は、マシン間でエネルギーを転送するために使用されます。",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "これは余分なエネルギーを蓄えることができます。",
