--- a/src/main/resources/assets/addsynth_energy/lang/ms_my.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ms_my.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Tenaga Disimpan",
 "gui.addsynth_energy.common.energy_usage": "Penggunaan Tenaga",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Ekstrak Maksimum",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Mod",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "negeri",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Masukan",
 "gui.addsynth_energy.jei_description.wire": "wayar tenaga digunakan untuk memindahkan tenaga antara mesin.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Ini dapat menyimpan lebihan tenaga.",
