--- a/src/main/resources/assets/addsynth_energy/lang/nl_nl.json
+++ b/src/main/resources/assets/addsynth_energy/lang/nl_nl.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Opgeslagen energie",
 "gui.addsynth_energy.common.energy_usage": "Energiegebruik",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Extractiesnelheid",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Modus",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Toestand",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Invoer",
 "gui.addsynth_energy.jei_description.wire": "Energiedraad wordt gebruikt om energie over te dragen tussen machines.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Dit kan overtollige energie opslaan.",
