--- a/src/main/resources/assets/addsynth_energy/lang/pl_pl.json
+++ b/src/main/resources/assets/addsynth_energy/lang/pl_pl.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Energia zmagazynowana",
 "gui.addsynth_energy.common.energy_usage": "Zużycie energii",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Maksymalny ekstrakt",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Tryb",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Status",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Wejście",
 "gui.addsynth_energy.jei_description.wire": "Drut energetyczny służy do przesyłania energii między maszynami.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Może to magazynować nadmiar energii.",
