--- a/src/main/resources/assets/addsynth_energy/lang/pt_br.json
+++ b/src/main/resources/assets/addsynth_energy/lang/pt_br.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Energia armazenada",
 "gui.addsynth_energy.common.energy_usage": "Uso de energia",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Extração máxima",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Modo",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Estado",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Entrada",
 "gui.addsynth_energy.jei_description.wire": "fio de energia é usado para transferir energia entre máquinas.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Isso pode armazenar excesso de energia.",
