--- a/src/main/resources/assets/addsynth_energy/lang/ro_ro.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ro_ro.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Stocate de energie",
 "gui.addsynth_energy.common.energy_usage": "Utilizarea energiei",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Rata de extracție",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "mod",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "stare",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Intrare",
 "gui.addsynth_energy.jei_description.wire": "firul de energie este utilizat pentru a transfera energie între mașini.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Aceasta poate stoca excesul de energie.",
