--- a/src/main/resources/assets/addsynth_energy/lang/ru_ru.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ru_ru.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "накопленная энергия",
 "gui.addsynth_energy.common.energy_usage": "Использование энергии",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Макс экстракт",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Режим",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Положение дел",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "вход",
 "gui.addsynth_energy.jei_description.wire": "Энергетический провод используется для передачи энергии между машинами.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Это может хранить избыточную энергию.",
