--- a/src/main/resources/assets/addsynth_energy/lang/ta_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ta_in.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "ஆற்றல் சேமிக்கப்பட்டது",
 "gui.addsynth_energy.common.energy_usage": "ஆற்றல் பயன்பாடு",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "பிரித்தெடுக்கும் வீதம்",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "பயன்முறை",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "நிலை",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "உள்ளீடு",
 "gui.addsynth_energy.jei_description.wire": "இயந்திரங்களுக்கு இடையில் ஆற்றலை மாற்ற ஆற்றல் வயர் பயன்படுத்தப்படுகிறது.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "இது அதிகப்படியான ஆற்றலை சேமிக்கும்.",
