--- a/src/main/resources/assets/addsynth_energy/lang/tr_tr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/tr_tr.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Depolanan Enerji",
 "gui.addsynth_energy.common.energy_usage": "Enerji kullanımı",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Maksimum Ekstrakt",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "kip",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "durum",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Giriş",
 "gui.addsynth_energy.jei_description.wire": "Enerji Teli, makineler arasında enerji aktarmak için kullanılır.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Bu fazla enerji depolayabilir.",
