--- a/src/main/resources/assets/addsynth_energy/lang/vi_vn.json
+++ b/src/main/resources/assets/addsynth_energy/lang/vi_vn.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "Năng lượng được lưu trữ",
 "gui.addsynth_energy.common.energy_usage": "Sử dụng năng lượng",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "Tỷ lệ chiết xuất",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "Chế độ",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "Trạng thái",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "Đầu vào",
 "gui.addsynth_energy.jei_description.wire": "Dây năng lượng được sử dụng để truyền năng lượng giữa các máy.",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "Điều này có thể lưu trữ năng lượng dư thừa.",
