--- a/src/main/resources/assets/addsynth_energy/lang/zh_tw.json
+++ b/src/main/resources/assets/addsynth_energy/lang/zh_tw.json
@@ -26,6 +26,8 @@
 "gui.addsynth_energy.common.energy_stored": "儲能",
 "gui.addsynth_energy.common.energy_usage": "能源消耗",
 "gui.addsynth_energy.common.efficiency": "Efficiency",
+"gui.addsynth_energy.common.max_extract": "提取率",
+"gui.addsynth_energy.common.extraction": "Extraction",
 "gui.addsynth_energy.common.mode": "模式",
 "gui.addsynth_energy.common.selected": "Selected",
 "gui.addsynth_energy.common.status": "狀態",
@@ -45,8 +47,7 @@
 "gui.addsynth_energy.tooltip.generator": "Generator",
 "gui.addsynth_energy.tooltip.energy_source": "Energy Source",
 "gui.addsynth_energy.tooltip.battery": "Battery",
-"gui.addsynth_energy.generator.input": "Input",
-"gui.addsynth_energy.generator.max_extract": "Max Extract",
+"gui.addsynth_energy.generator.input": "輸入值",
 "gui.addsynth_energy.jei_description.wire": "能量線用於在機器之間傳遞能量。",
 "gui.addsynth_energy.jei_description.generator": "This is a standard Generator. Insert solid fuels such as Wood, Coal, and Charcoal to generate energy.",
 "gui.addsynth_energy.jei_description.energy_storage": "這會存儲多餘的能量。",
