--- a/src/main/resources/assets/addsynth_energy/lang/ta_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ta_in.json
@@ -12,6 +12,7 @@
 "item.addsynth_energy.circuit_tier_6": "Circuit Tier 6",
 "item.addsynth_energy.circuit_tier_7": "Circuit Tier 7",
 "item.addsynth_energy.circuit_tier_8": "Circuit Tier 8",
+"item.addsynth_energy.circuit_tier_9": "Circuit Tier 9",
 
 "block.addsynth_energy.energy_wire": "சக்தி வயர்",
 "block.addsynth_energy.generator": "எரிசக்தி விநியோகிப்பாளர்",
