--- a/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ko_kr.json
@@ -12,6 +12,7 @@
 "item.addsynth_energy.circuit_tier_6": "Circuit Tier 6",
 "item.addsynth_energy.circuit_tier_7": "Circuit Tier 7",
 "item.addsynth_energy.circuit_tier_8": "Circuit Tier 8",
+"item.addsynth_energy.circuit_tier_9": "Circuit Tier 9",
 
 "block.addsynth_energy.energy_wire": "에너지 와이어",
 "block.addsynth_energy.generator": "에너지 발생기",
