Main Recipe Update

--- a/changelog.txt
+++ b/changelog.txt
@@ -54,6 +54,7 @@ CHANGED:
   Some Machine State status messages are now color-coded.
   Removed any top-level sections in Config files.
    - This will cause most of your config files to be reset. Sorry!
+  Raised generation of Titanium back up to where it was in versions 1.3.x.
 FIXED:
   Fixed Unidentified Chainmail armor dropping as often as Gold armor.
   Optimized Lasers:
