--- a/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
+++ b/src/main/resources/assets/addsynth_energy/lang/cs_cz.json
@@ -56,6 +56,8 @@
 "gui.addsynth_energy.jei_description.compressor": "Kompresor se používá ke stlačování kovových ingotů do kovových desek.",
 "gui.addsynth_energy.jei_description.circuit_fabricator": "Uses Silicon, Redstone, and various metals to produce electronic circuits, which are then used to craft other machines.",
 "gui.addsynth_energy.jei_description.universal_energy_interface": "Tento stroj může spolupracovat s jinými energetickými systémy a přenášet energii do az jiných strojů.",
+"gui.addsynth_energy.jei_description.energy_diagnostics_block": "This can be attached to an Energy Wire to display the energy Input & Output of all the machines attached to the Energy Wire. It can only read one Energy Network at a time, and only shows a maximum of 16 machines right now.",
+"gui.addsynth_energy.jei_description.power_regulator": "This is a crafting item. Primarily used in places where energy needs to be tightly controlled and regulated.",
 "gui.addsynth_energy.machine_state.off": "Vypnuto",
 "gui.addsynth_energy.machine_state.powering_on": "Zapíná se",
 "gui.addsynth_energy.machine_state.powering_off": "Vypnutí",
