--- a/src/main/resources/assets/addsynth_energy/lang/ms_my.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ms_my.json
@@ -56,6 +56,8 @@
 "gui.addsynth_energy.jei_description.compressor": "Kompresor digunakan untuk memampatkan logam ke dalam plat logam.",
 "gui.addsynth_energy.jei_description.circuit_fabricator": "Uses Silicon, Redstone, and various metals to produce electronic circuits, which are then used to craft other machines.",
 "gui.addsynth_energy.jei_description.universal_energy_interface": "Mesin ini dapat bersambung dengan sistem tenaga lain dan memindahkan tenaga ke dan dari mesin lain.",
+"gui.addsynth_energy.jei_description.energy_diagnostics_block": "This can be attached to an Energy Wire to display the energy Input & Output of all the machines attached to the Energy Wire. It can only read one Energy Network at a time, and only shows a maximum of 16 machines right now.",
+"gui.addsynth_energy.jei_description.power_regulator": "This is a crafting item. Primarily used in places where energy needs to be tightly controlled and regulated.",
 "gui.addsynth_energy.machine_state.off": "Mati",
 "gui.addsynth_energy.machine_state.powering_on": "Menghidupkan",
 "gui.addsynth_energy.machine_state.powering_off": "Mematikan",
