--- a/src/main/resources/assets/addsynth_energy/lang/ta_in.json
+++ b/src/main/resources/assets/addsynth_energy/lang/ta_in.json
@@ -56,6 +56,8 @@
 "gui.addsynth_energy.jei_description.compressor": "உலோகங்களை உலோகத் தகடுகளாக அமுக்க அமுக்கி பயன்படுத்தப்படுகிறது.",
 "gui.addsynth_energy.jei_description.circuit_fabricator": "Uses Silicon, Redstone, and various metals to produce electronic circuits, which are then used to craft other machines.",
 "gui.addsynth_energy.jei_description.universal_energy_interface": "இந்த இயந்திரம் பிற எரிசக்தி அமைப்புகளுடன் இடைமுகப்படுத்தலாம் மற்றும் பிற இயந்திரங்களுக்கு ஆற்றலை மாற்றும்.",
+"gui.addsynth_energy.jei_description.energy_diagnostics_block": "This can be attached to an Energy Wire to display the energy Input & Output of all the machines attached to the Energy Wire. It can only read one Energy Network at a time, and only shows a maximum of 16 machines right now.",
+"gui.addsynth_energy.jei_description.power_regulator": "This is a crafting item. Primarily used in places where energy needs to be tightly controlled and regulated.",
 "gui.addsynth_energy.machine_state.off": "ஆஃப்",
 "gui.addsynth_energy.machine_state.powering_on": "பவர் ஆன்",
 "gui.addsynth_energy.machine_state.powering_off": "அணைக்கிறது",
