--- a/src/main/resources/assets/addsynth_energy/lang/uk_ua.json
+++ b/src/main/resources/assets/addsynth_energy/lang/uk_ua.json
@@ -56,6 +56,8 @@
 "gui.addsynth_energy.jei_description.compressor": "Компресор використовується для стискання металевих злитків на металеві пластини.",
 "gui.addsynth_energy.jei_description.circuit_fabricator": "Uses Silicon, Redstone, and various metals to produce electronic circuits, which are then used to craft other machines.",
 "gui.addsynth_energy.jei_description.universal_energy_interface": "Ця машина може взаємодіяти з іншими енергетичними системами і передавати енергію в інші машини.",
+"gui.addsynth_energy.jei_description.energy_diagnostics_block": "This can be attached to an Energy Wire to display the energy Input & Output of all the machines attached to the Energy Wire. It can only read one Energy Network at a time, and only shows a maximum of 16 machines right now.",
+"gui.addsynth_energy.jei_description.power_regulator": "This is a crafting item. Primarily used in places where energy needs to be tightly controlled and regulated.",
 "gui.addsynth_energy.machine_state.off": "Вимкнено",
 "gui.addsynth_energy.machine_state.powering_on": "Увімкнення живлення",
 "gui.addsynth_energy.machine_state.powering_off": "Вимкнення живлення",
