--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v1.5 - TBD
+v1.5 - December 22, 2022
 INFO:
   I was originally planning to split the mod into 3 seperate files, starting with
     this version. However, development is taking longer than expected, and that's
